fix: fixes from review feedback
